# wiln

./: .gitignore  CMakeLists.txt  README.md  package.xml  wiln.repos
launch/: backpack_offline.launch.xml  controller.launch  husky.launch.xml  marmotte.launch.xml  realtime_mapping.launch  realtime_mapping_deskew.launch  simulation.launch  warthog.launch  warthog.launch.xml
msg/: DirectionalPath.msg  PathSequence.msg
params/: simulation_kinematic_HBZ_params.launch  simulation_params.launch  warthog_differential_orthexp_params.launch  warthog_kinematic_HBZ_params.launch  warthog_kinematic_SLP_params.launch  warthog_params.launch
params/controller/: warthog_differential_orthexp_params.launch  warthog_kinematic_HBZ_params.launch
params/icp/: realtime_icp_config.yaml  realtime_input_filters.yaml
prototype_notebooks/: smooth_filter.ipynb
src/: main.cpp  wiln_node.cpp
srv/: LoadMapTraj.srv  PlayLoop.srv  SaveMapTraj.srv
